# ruya

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
docs/: design.md  example_entity_composition_car.md  questions.md  structure.md  todo.md
src/: main.cpp  sample_app.hpp  sample_main.cpp  test_app.hpp
src/core/: uuid.h  window.cpp  window.h
src/core/math/: transform.cpp  transform.h  transform.hpp
src/engine/core/: window.cpp  window.h
src/engine/render/: renderer.cpp
src/io/: file_io.hpp  image_io.hpp  paths.hpp
src/render/: gpu_vault.hpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.hpp
src/render/shaders/flat/: flat_frag.frag  flat_vert.vert
src/render/shaders/phong/: light_source.frag  object.frag  object.vert
src/scene/: components.hpp  gen.hpp  image.hpp  light.hpp  material.cpp  material.h  mesh.cpp  mesh.h  object.h  scene.cpp  scene.h  scene.hpp  vault.hpp
src/ui/: light_widget.h  model_widget.h  object_widget.h  scene_widget.h  widgets.hpp
